--- a/style.css
+++ b/style.css
@@ -20,14 +20,18 @@ img {
     top: 20px;
     padding: .6%;
     background-color: rosybrown;
+    z-index: 2;
 }
 
 
 #cabecalho {
-    padding: 10px 0px;
+    top: 0cm;
+    padding: 0px 0px 20px 0px;
     background-color: rgb(160, 115, 115);
     width: 100%;
     height: 100px;
+    position: sticky;
+    z-index: 1;
 }
 header h1 {
     margin-block-start: 0px;
@@ -38,6 +42,7 @@ header h1 {
 section div {
     display: inline-block;
     margin: 30px 30px 30px 30px;
+    padding-left: 5px;
     background-color: rgb(212, 186, 186);
     width: 220px;
     text-align: center;
@@ -103,20 +108,24 @@ article h2 {
 
 
 article p{
-    margin-left: 30px;
+    margin-left: 18px;
 }
 
 
 
 aside {
-    width: 280px;
+    color: rgb(253, 251, 251);
+    width: 260px;
+    padding-right: 13px;
+    padding-left: 13px;
+    padding-top: 290px ;
     position: absolute;
-    right: 13px;
-    top: 290px;
+    right: 16px;
+    top: 0px;
     font-size: 90%;
-}
-
-
-aside h2 {
-    text-align: center;    
+    background-color: rgb(134, 75, 75);
+    z-index: 0;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 80%;
 }
