--- a/style.css
+++ b/style.css
@@ -22,7 +22,11 @@ body {
   height: 20%;
   width: 20%;
   border-radius: 10%;
-  margin-top: 70px;
+  margin-top: 50px;
+}
+
+#social-icons {
+  font-size: 8px;
 }
 
 #licoes_aprendidas {
