--- a/style.css
+++ b/style.css
@@ -1,21 +1,36 @@
 body {
-    background-color:rgb(253, 251, 251);
-}
+    background-color: rgb(253, 251, 251);
+    }
+
 #cabecalho {
     border: 1px solid black;
     position: fixed;
     top: 0;
-}
+    }
+
 #minha_foto {
     width: 200px;
     position: absolute;
     top: 100px;    
-}
-h2 {
+    }  
+
+h2:nth-of-type(1)  {
     position: absolute;
     top: 350px;   
-}
+    }
+h2:nth-of-type(2) {
+    position: absolute;
+    top: 350px;  
+    left: 320px; 
+    }
+
 #licoes_aprendidas {
     position: absolute;
     top: 400px;   
-}
+    }
+
+#licoes_a_aprender {
+    position: absolute;
+    top: 400px;
+    left: 300px; 
+    }
