--- a/style.css
+++ b/style.css
@@ -1,76 +1,74 @@
 body {
-    background-color: rgb(253, 251, 251);
+  background-color: rgb(253, 251, 251);
 }
 
 main {
-    background-color: #f8f1cf;
-    border: 1px solid;
-    width: 900px;
-    text-align: justify;
-    margin: auto;
+  background-color: rgb(248, 241, 207);
+  border: 1px solid;
+  width: 900px;
+  text-align: justify;
+  margin: auto;
 }
 
 a {
-    padding: 10px;
+  padding: 10px;
 }
 
-#cabecalho { 
-    border: 1px solid;
-    background-color: #dac144;
-    border-radius: 5px;
-    color: #3f3b23;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100px;
-;
+#cabecalho {
+  border: 1px solid;
+  background-color: rgb(218, 193, 68);
+  border-radius: 5px;
+  color: rgb(63, 59, 35);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100px;
 }
 
 #titulo {
-    text-align: center;
-    font-size: 34px;
+  text-align: center;
+  font-size: 34px;
 }
 
 #minha_foto {
-    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.556);
-    border-radius: 10px;
-    width: 200px;
-    margin-top: 110px;
-    margin-left: 20px;
+  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.556);
+  border-radius: 10px;
+  width: 200px;
+  margin-top: 110px;
+  margin-left: 20px;
 }
 
 .ao_lado {
-    display: inline-block;
-    padding-right: 150px;
-    
+  display: inline-block;
+  padding-right: 150px;
 }
 
-.licoes{
-    display: inline-block;
-    padding-right: 150px;
-    padding-left: 129px;
+.licoes {
+  display: inline-block;
+  padding-right: 150px;
+  padding-left: 110px;
 }
 
-.licoes h3 {
-    color: #7A6B1C;
+.licoes h2 {
+  color: rgb(122, 107, 28);
 }
 
 #licoes_aprendidas {
-    font-family: sans-serif;
+  font-family: sans-serif;
 }
 
 #licoes_a_aprender {
-    font-family: sans-serif;
+  font-family: sans-serif;
 }
 
 .lado-direito {
-    line-height: 25px;
+  line-height: 25px;
 }
 
 .lado-esquerdo {
-    line-height: 25px;
+  line-height: 25px;
 }
 
 #rodape {
-    text-align: center;
+  text-align: center;
 }
