--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ h2{
 }
 
 h3{
-    
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #cabecalho{
@@ -62,16 +63,17 @@ h3{
     height: 90%;
     width: 100%;
     background-color:rgb(253, 251, 251);
+    display: inline-block;
 }
 
 .profile{
     width:20%;
-    height:80%;
+    height:600px;
     background-color: rgb(176, 196, 160);
-    position: fixed;
     border-style: inset;
     border-width: 7px 0 0 0;
     border-color: rgb(6, 108, 35);
+    display: inline-block;
     
 }
 
@@ -80,6 +82,7 @@ h3{
     margin-left: 26px;
     width : 90%;
     background-color: rgb(176, 196, 160);
+    line-height: 25px;
     
 }
 
@@ -88,6 +91,80 @@ h3{
     text-align: center;
     margin-bottom: 50px;
 
+}
+
+.lado-esquerdo{
+    margin-top: 50px;
+    margin-left: 50px;   
+    display: inline-block;
+    position: absolute;
+    height: 250px;
+    width: 350px;
+    background-color: rgb(16, 191, 245);
+    text-align: center;
+    border-style: solid;
+}
+
+.lado-direito{
+    margin-top: 50px;
+    margin-left: 450px;
+    position:absolute;
+    display: inline-block;
+    height: 250px;
+    width: 350px;
+    background-color:crimson;
+    text-align: center;
+    border-style: solid;
+}
+
+#l_aprendidas{ 
+    margin-top: 350px;
+    margin-left: 50px;  
+    display: inline-block;
+    position: absolute;
+    height: 230px;
+    width: 350px;
+    background-color: rgb(225, 225, 238);
+    text-align: center;
+    border-style: dotted;
+    
+    
+}
+#lol{
+    margin-top: 350px;
+    margin-left: 450px;
+    position:absolute;
+    display: inline-block;
+    height: 130px;
+    width: 350px;
+    background-color: rgb(225, 225, 238);
+    text-align: center;
+    border-style: dotted;
+}
+
+#licoes_aprendidas{
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    
+}
+
+#licoes_a_aprender{
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+}
+
+.text{
+    width: 75%;
+    margin-left: 50px;
+    text-align: center;
+}
+
+#rodape{
+    width: 100%;
+    height: 50%;
+    background-color: green;
 }
 
 
