--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     text-align: center;
     position: fixed;
     height: 60px;
-    top: 0;
+    top: 0%;
     width: 100%;
     margin: auto;
    
