--- a/style.css
+++ b/style.css
@@ -1,25 +1,52 @@
 body {
   background-color: rgb(253, 251, 251);
+  font-family: "Rubik", sans-serif;
+  font-size: 14px;
+  line-height: 20px;
   margin: 0;
   padding: 0;
 }
 
 main {
-  margin-top: 60px;
+  margin-top: 100px;
   padding: 20px;
+}
+
+div {
+  padding: 0 20px;
 }
 
 #cabecalho {
   background-color: aqua;
-  height: 60px;
+  height: 100px;
   left: 0;
   position: fixed;
   top: 0;
   width: 100%;
 }
 
+#navegacao ul {
+  list-style: none;
+  padding: 0 20px;
+}
+
+#navegacao ul li {
+  display: inline;
+  padding-right: 20px;
+}
+
+#navegacao ul li a {
+  color: rgb(26, 0, 69);
+  text-decoration: none;
+}
+
 #minha_foto {
   border-radius: 40px;
   padding: 20px;
   width: 40%;
+}
+
+#titulo {
+  font-size: 24px;
+  padding-left: 20px;
 }
