--- a/style.css
+++ b/style.css
@@ -1,13 +1,9 @@
 body{
     background-color: 253,251,251;
 }
-
 #cabecalho{
-    position: fixed;
-    top: 0;
+position: fixed;top: 0;
 }
-
 #minha_foto{
-    margin-top: 10em;
-    width: 18%;
+margin-top: 10em;width: 18%;
 }
