--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header h1 {
   color: white;
 }
 
-section nav {
+nav {
   color: white;
 }
 
@@ -32,10 +32,9 @@ section nav {
 .link {
   background-color: blue;
   color: white;
-  padding: 15px;
+  padding: 10px;
   border: 1px solid black;
-  margin: 1px 1px 35px 75px;
-  display: inline-block;
+  margin: 1px 1px 35px 75px;  
 }
 
 .link:hover {
@@ -78,6 +77,14 @@ aside p {
 
 .lista-nao-ordenada {
   display: inline-block;
+}
+
+.lista-ordenada h2 {
+  font-size: 20px;
+}
+
+.lista-nao-ordenada h2 {
+  font-size: 20px;
 }
 
 article p {
