--- a/style.css
+++ b/style.css
@@ -3,40 +3,68 @@ body {
 }
 
 #cabecalho {
-        border: 1px solid black;
         position: fixed;
         top: 0;
+        padding: 10px;
+        background-color: cornflowerblue;
+}
+
+nav {
+        position: fixed;
+        top: 100px;
+        background-color: darkcyan;
+}
+
+section {
+    display: inline-block;
+    border: 1px solid black;
 }
 
 #minha_foto {
+        border: 1px solid black;
         width: 200px;
         position: absolute;
-        top: 100px;    
+        top: 170px;
 } 
 
 h2:nth-of-type(1) {
         position: absolute;
-        top: 350px;   
+        top: 350px;
 }
 
 h2:nth-of-type(2) {
         position: absolute;
-        top: 350px;  
-        left: 320px; 
+        top: 350px;
+        left: 300px;
 }
 
 #licoes_aprendidas {
+        border: 1px solid black;
         position: absolute;
-        top: 400px;   
+        top: 400px;
 }
 
 #licoes_a_aprender {
+        border: 1px solid black;
         position: absolute;
         top: 400px;
-        left: 300px; 
+        left: 300px;
 }
 
-p {
+article {
+        border: 1px solid black;
         position: absolute;
         top: 600px;
+}
+
+aside {
+        border: 1px solid black;
+        position: absolute;
+        top: 700px;
+}
+
+#rodape {
+        background-color: black;
+        color: cornflowerblue;
+        margin-top: 100%;
 }
