--- a/style.css
+++ b/style.css
@@ -86,3 +86,17 @@ aside p {
 .lista-nao-ordenada h2 {
   font-size: 20px;
 }
+
+.lado-esquerdo {
+  float: left;
+  max-width: 69%;
+  text-align: justify;
+}
+
+.lado-direito {
+  float: right;
+  max-width: 30%;
+  border: 1px solid black;
+  background-color: gainsboro;
+  text-align: justify;
+}
